# Einfachirgendwa1.github.io

./: Cargo.toml  Makefile  README.md  index.html
js/: main.js
pkg/: package.json  pages.d.ts  pages.js  pages_bg.wasm  pages_bg.wasm.d.ts
src/: lib.rs
test_locally/: Cargo.toml
test_locally/src/: main.rs
