[package]
name = "pages"
version = "0.1.0"
edition = "2021"
description = "just testing github pages"
license = "MIT"
repository = "https://github.com/Einfachirgendwa1/Einfachirgendwa1.github.io"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
